--- a/app/style.css
+++ b/app/style.css
@@ -1,6 +1,6 @@
 body{
-		background-image: url("template.jpg");
-	}
+		background-image: url("media/template.jpg");
+}
 
 .button1 {
     display: block;
