--- a/templates/main.html
+++ b/templates/main.html
@@ -9,8 +9,7 @@
 
 
 </head>
-<h1>Welcome to Pocket Fighter</h1>
-<h2>{{n_players}} players logged in database</h2>
+<h1>Welcome to Pocket Fighter!</h1>
 
 <script src="app/main.js"></script>
 
